2007-10-10  Al Riddoch  <alriddoch@zepler.org>

	* test/Avatar_unittest.cpp: Cover the rest of Avatar. Coverage is now
	  pretty much complete.

2007-10-10  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Avatar.cpp: Toughen up operation checking in logoutResponse().

2007-10-09  Al Riddoch  <alriddoch@zepler.org>

	* test/Avatar_unittest.cpp: Cover moveInDirection(),
	  place(), wield(), useOn(), attack() and useStop().

2007-10-09  Al Riddoch  <alriddoch@zepler.org>

	* test/agent.cpp, test/commander.cpp, test/controller.cpp,
	  test/tests.cpp: Re-order headers for OSX.

2007-10-09  Al Riddoch  <alriddoch@zepler.org>

	* test/clientConnection.cpp, test/stubServer.cpp: Re-order headers
	  for OSX.

2007-10-08  Al Riddoch  <alriddoch@zepler.org>

	* test/Avatar_unittest.cpp: Cover drop(), take(), touch(), say(),
	  moveToPoint(), moveInDirection().

2007-10-08  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Entity.h: Make all private members protected for testing.

2007-10-07  Al Riddoch  <alriddoch@zepler.org>

        * test/stubServer.cpp: Provide more verbose details about why the
	  child process died.

2007-10-06  Al Riddoch  <alriddoch@zepler.org>

        * test/Avatar_unittest.cpp: Cover destructor and deactivate().

2007-10-06  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Log.h, Eris/Avatar.h, Eris/Avatar.cpp: Clean up white spacing.

	* Eris/Avatar.h: Make all private members protected for testing.
	  Change getId() to returning a const string reference.

	* test/Avatar_unittest.cpp: Start covering Avatar.

	* test/tests.cpp: Start trying to get this to compile again on the
	  Mac.

2007-10-06  Al Riddoch  <alriddoch@zepler.org>

	* test/Alarm_unittest.cpp: Add full coverage of Alarm.

2007-10-06  Al Riddoch  <alriddoch@zepler.org>

	* test/Account_unittest.cpp: Add coverage for sightCharacter(),
	  netConnected(), netDisconnecting(), netFailure(),
	  handleLogoutTimeout() and avatarLogoutResponse(). First pass at
	  coverage of this class is now complete.
